# DeTest-EXECO

./: CMakeLists.txt  Notes.md  config.yaml  gp_meshing.cpp  gp_meshing_faces.cpp  gp_meshing_faces_pca.cpp  gp_pc_mesh_patch.cpp  gp_pc_pca.cpp  mesh_matching.cpp
Mesh_Files/: global_cloud.ply  global_mesh.ply  global_mesh_18-08-2025_Neighbourhood.ply
